--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#21417e</color>
     <color name="colorPrimaryDark">#001b51</color>
     <color name="colorAccent">#00b7bf</color>
+    <color name="light_gray">#A8A8A8</color>
+    <color name="black">#000000</color>
 </resources>
